Uploading the actual file this time
I uploaded the wrong one last time.

--- a/Assignment1/Index.html
+++ b/Assignment1/Index.html
@@ -40,5 +40,7 @@
     </div>
     <p1> That's me!</p1>
 <a href="Introduction.html">Click this to go to the introduction!</a>
+    <br>
+<a href="little_prince.html">(Or you could click this and go to the Little Prince paragraph)</a>
 </body>
 </html>
